--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "SET DEBUG=eduwork-server:* && nodemon ./bin/www"
   },
   "dependencies": {
+    "@casl/ability": "^5.4.4",
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -13,10 +14,13 @@
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "mongoose-sequence": "^5.3.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
