--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "SET DEBUG=eduwork-server:* && nodemon ./bin/www"
+    "start": "SET DEBUG=eduwork-server:* && nodemon ./bin/www",
+    "client": "npm start --prefix ../frontend-eduwork",
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "dependencies": {
     "@casl/ability": "^5.4.4",
     "bcrypt": "^5.1.0",
+    "concurrently": "^8.2.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
